/*
 * ============LICENSE_START=======================================================
 * dcaegen2-collectors-veshv
 * ================================================================================
 * Copyright (C) 2018 NOKIA Intellectual Property. All rights reserved.
 * ================================================================================
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ============LICENSE_END=========================================================
 */
syntax = "proto3";
package org.onap.ves;

// Definition for RTPM

message HVRanMeasFields {
  message HVRanMeasPayload {
    message PMObject {
      message HVRanMeas {
        uint32 measurement_id = 1;
        repeated uint32 counter_subid = 2;
        repeated sint64 counter_value = 3;
        repeated uint32 missing_counter_subid = 4;
        bool suspectFlagIncomplete = 5; // (some is data missing due to internal error)
        bool suspectFlagOutOfSync = 6; // (source time not aligned)
      }

      string uri = 1; // monitored object URI
      repeated HVRanMeas hvRanMeas = 2; // performance counters grouped by measurement types
    }
    repeated PMObject pmObject = 1;
  }

  message AdditionalField {
    string name = 1;
    string value = 2;
  }

  string hvRanMeasFieldsVersion = 1; // version of HVRanMeasFields message
  uint32 period_ms = 2; // period configured for reporting the data in milliseconds
  string timezone = 3; // timezone of Network Function sending the data
  string pmDictionaryVsn = 4; // vendor name + schema version E.g. NOKIA_LN7.0, uniquely identify the relevant PM dictionary
  HVRanMeasPayload hvRanMeasPayload = 5; // objects being monitored
  repeated AdditionalField additionalFields = 6; // array of name-value pairs if needed
}